My identity for @lewagon in the gitconfig

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,9 @@
     "[python]": {
         "editor.bracketPairColorization.enabled": false,
         "editor.guides.bracketPairs": false,
-        "editor.tabSize": 4
+        "editor.tabSize": 4,
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-python.black-formatter",
     },
     "editor.bracketPairColorization.enabled": true,
     "editor.detectIndentation": false,
